# cmake_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  unit_tests.cmake
include/: my.h
src/: main.cc
src/my/: source.cc
tests/: failure_test.cc  my_test.cc
